--- a/home.html
+++ b/home.html
@@ -16,7 +16,6 @@
 	<div class="newTweet">
 		<form>
         	<fieldset>
-            	<legend>Leave a Comment</legend>
                 <table>
                     <tr>
                         <td>Comment:</td><td><textarea id="content"></textarea></td>
@@ -27,7 +26,12 @@
         </form>
 	</div>
 	<div id="timeline">
-		<h2>Timeline</h2>
+		<h2 class="prep">Timeline</h2>
+		<div id="tweetSection">
+			
+		</div>
+<!--
+
 		<div class="tweet">
 			<p class="at"> <img src="img/def.png" width="50px" height="50px"> @someone </p>
 			 <p class="comment">This is a tweet! </p>
@@ -53,6 +57,8 @@
 			 <p class="comment">This is a tweet! </p>
 			<p> <input class="like" type="button" value="Like"/> <input class="respond" type="button" value="Respond"/> </p>
 		</div>
+
+		-->
 	</div>
 </body>
 </html>
@@ -62,24 +68,21 @@
 		var comments = "";
 
 		$("#twt").on('click', function() {
-			alert("sludos");
-			if (("#content").val() == "") {
+			var tuit = $("textarea#content").val();
+			alert(tuit);
+			if (tuit == "") {
 				alert("Please type something in the field.");
 			} else {
-				comments += '<div class="tweet">
-				<p class="at"> <img src="img/def.png" width="50px" height="50px"> @someone </p>
-			 	<p class="comment">' $("#content").val() '</p>
-				<p> <input class="like" type="button" value="Like"/> <input class="respond" type="button" value="Respond"/> </p>
-				</div>';
+				comments = '<div class="tweet"><p class="at"> <img src="img/def.png" width="50px" height="50px"> @someone </p><p class="comment">' + tuit +'</p><p> <input class="like" type="button" value="Like"/> <input class="respond" type="button" value="Respond"/> </p></div>';
 
 				alert(comments);
 
 				$("#content").val("");
 
-				$("#timeline").append(comments);
+				$("#tweetSection").prepend(comments);
 			}
 		});
 
-	}
+	});
 
 </script>
