--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
 		<ul>
 			<li id="home"><a href="">Home</a></li>
 			<li id="profile"><a href="profile.html">Profile</a></li>
+			<li id="logout"><a href="friends.html">Friends</a></li>
+			<li id="logout"><a href="users.html">Users</a></li>
 			<li id="logout"><a href="login.html">Log Out</a></li>
 		</ul>
 	</div>
@@ -28,7 +30,7 @@
 	<div id="timeline">
 		<h2 class="prep">Timeline</h2>
 		<div id="tweetSection">
-			
+
 		</div>
 <!--
 
