--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,8 @@
 			<ul>
 				<li id="home"><a href="home.html">Home</a></li>
 				<li id="profile"><a href="profile.html">Profile</a></li>
+				<li id="logout"><a href="friends.html">Friends</a></li>
+				<li id="logout"><a href="users.html">Users</a></li>
 				<li id="logout"><a href="login.html">Log Out</a></li>
 			</ul>
 		</div>
@@ -22,9 +24,9 @@
 			<p>Joined August 2009</p>
 		</div>
 		<div class="timeline">
-			
+
 		</div>
 	</div>
-	
+
 </body>
 </html>
