--- a/friends.html
+++ b/friends.html
@@ -10,8 +10,8 @@
 		<ul>
 			<li id="home"><a href="home.html">Home</a></li>
 			<li id="profile"><a href="profile.html">Profile</a></li>
-			<li id="logout"><a href="friends.html">Friends</a></li>
-			<li id="logout"><a href="users.html">Users</a></li>
+			<li id="friends"><a href="friends.html">Friends</a></li>
+			<li id="users"><a href="users.html">Users</a></li>
 			<li id="logout"><a href="login.html">Log Out</a></li>
 		</ul>
 	</div>
@@ -49,7 +49,24 @@
 			}
 		});
 
-		$
+		$("#logout").on('click', function() {
+			//alert("cierra sesion");
+			$.ajax({
+                    type: "POST",
+                    url: "data/applicationLayer.php",
+                    dataType: "json",
+                    data: {'action' : 'ENDSESS'},
+                    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+                    success: function(jsonData) {
+                        //window.location.replace("login.html");
+                        alert(jsonData.success);
+
+                    },
+                    error: function(errorMsg){
+						alert(errorMsg);
+                    }
+                });
+		});
 
 	});
 
