--- a/friends.html
+++ b/friends.html
@@ -31,42 +31,61 @@
 <script type="text/javascript">
 	$(document).on('ready', function() {
 
-		var comments = "";
+		$.ajax({
+                type: 'POST',
+                url: 'data/applicationLayer.php',
+                dataType: 'json',
+                data: {'action':'GET_SES'},
+                headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+                success: function(jsonData) {
+                    
 
-		$("#twt").on('click', function() {
-			var tuit = $("textarea#content").val();
-			//alert(tuit);
-			if (tuit == "") {
-				alert("Please type something in the field.");
-			} else {
-				comments = '<div class="friend"><p class="at"> <img src="img/def.png" width="50px" height="50px"> @someone </p><p class="comment">' + tuit +'</p><p> <input class="like" type="button" value="Like"/></p></div>';
+                	var comments = "";
 
-				//alert(comments);
+					$("#twt").on('click', function() {
+						var tuit = $("textarea#content").val();
+						//alert(tuit);
+						if (tuit == "") {
+							alert("Please type something in the field.");
+						} else {
+							comments = '<div class="friend"><p class="at"> <img src="img/def.png" width="50px" height="50px"> @someone </p><p class="comment">' + tuit +'</p><p> <input class="like" type="button" value="Like"/></p></div>';
 
-				$("#content").val("");
+							//alert(comments);
 
-				$("#friendSection").prepend(comments);
-			}
-		});
+							$("#content").val("");
 
-		$("#logout").on('click', function() {
-			//alert("cierra sesion");
-			$.ajax({
-                    type: "POST",
-                    url: "data/applicationLayer.php",
-                    dataType: "json",
-                    data: {'action' : 'ENDSESS'},
-                    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
-                    success: function(jsonData) {
-                        //window.location.replace("login.html");
-                        alert(jsonData.success);
+							$("#friendSection").prepend(comments);
+						}
+					});
 
-                    },
-                    error: function(errorMsg){
-						alert(errorMsg);
-                    }
-                });
-		});
+					$("#logout").on('click', function() {
+						//alert("cierra sesion");
+						$.ajax({
+			                    type: "POST",
+			                    url: "data/applicationLayer.php",
+			                    dataType: "json",
+			                    data: {'action' : 'ENDSESS'},
+			                    headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+			                    success: function(jsonData) {
+			                        //window.location.replace("login.html");
+			                        alert(jsonData.success);
+
+			                    },
+			                    error: function(errorMsg){
+									alert(errorMsg);
+			                    }
+			                });
+					});
+
+
+                },
+                error: function(errorMsg){
+                    alert("Please log in first.");
+                    window.location.replace("login.html");
+                }
+            });
+
+		
 
 	});
 
